user manual added

--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -8,6 +8,8 @@
     <title>{% block title %}Centre for Inclusive Social Development{% endblock %}</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
+    <link rel="icon" href="https://res.cloudinary.com/djxwoilou/image/upload/v1755620594/cisd/images/CISDL1_CLogo-1-2048x1467_1_kkywut.png"
+        type="image/png">
     <link href="{% static 'css/latest.css' %}" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/alpinejs/3.13.0/cdn.min.js" defer></script>
 
